manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
  name: sparktodo-api-ingress
spec:
  rules:
  - host: "sparktodo-api.lemonsharp.top"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: sparktodo-api
            port:
              number: 80
  tls:
  - hosts:
    - sparktodo-api.lemonsharp.top
